# Network_Programming_2025

./: .gitignore  Makefile  main.py  pyproject.toml
pr_1/: README.md  ban.txt  client.py  server.py  settings.py
pr_2/: README.md  blocking_server.py  client.py  processing_server.py  settings.py  threading_server.py
pr_3/: README.md  asyncio_server.py  client.py  nonblocking_server.py  select_server.py
pr_4/: README.md  download_files.py  test_conn.py  upload_files.py
pr_4/downloads/: ubuntudists.txt
pr_4/downloads/manifests/: trusty-updates_installer-amd64_installer-amd64_MANIFEST  trusty-updates_installer-i386_installer-i386_MANIFEST  xenial-updates_installer-amd64_installer-amd64_MANIFEST  xenial-updates_installer-i386_installer-i386_MANIFEST
pr_5/: README.md  file_transfer_client.py  file_transfer_server.py  reporting_system_client.py  reporting_system_server.py
pr_6/: README.md  ftp_client.py  ftp_email.py  ftp_server.py  mail_sender.py  order_client.py  order_server.py  sample_mail.txt
pr_6/ftp_root/ARC/: sample_mail.txt
