[project]
name = "network-programming-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioftp>=0.25.1",
    "python-dotenv>=1.1.0",
    "ruff>=0.11.8",
    "sendgrid>=6.12.0",
    "tqdm>=4.67.1",
]

[tool.ruff]
line-length = 120
